fixed issues with stuff displaying wrong on mobile

--- a/web-app/src/app/components/home.component.css
+++ b/web-app/src/app/components/home.component.css
@@ -3,11 +3,6 @@
     animation: tracking-in-expand-fwd 1s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
 
-.home-content {
-    justify-content: center;
-    display: flex;
-}
-
 .icon:hover {
     color: lightblue !important;
 }
