--- a/web-app/src/app/components/resume.component.scss
+++ b/web-app/src/app/components/resume.component.scss
@@ -1,5 +1,6 @@
 .pdf-container {
   div > canvas {
     padding-bottom: 2rem;
+    margin-left: 2rem;
   }
 }
